# searxng-deep-research

./: .gitignore  .releaseignore  AGENTS.md  ARCHITECTURE.md  INSTALL.md  LICENSE  README.md  README_RELEASE.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.8.1.2.md  RELEASE_NOTES_v0.8.1.3.md  RELEASE_NOTES_v0.8.1.4.md  RELEASE_NOTES_v0.8.1.md  RELEASE_NOTES_v0.8.2.md  RELEASE_NOTES_v0.8.3.md  RELEASE_NOTES_v0.8.4.md  ROADMAP.md  SECURITY.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hermes/plans/: 2026-06-05_172617-phase-1-runtime-config.md  2026-06-05_173200-phase-2-canonical-votes.md  2026-06-05_phase-1-security-review.md  2026-06-05_phase-2-security-review.md  2026-06-06_090000-phase-3-fact-extraction.md  2026-06-06_093000-phase-4-llm-verifier.md  2026-06-06_113000-phase-1-numeric-mismatch.md  2026-06-06_phase-3-security-review.md  2026-06-06_phase-4-security-review.md  ISSUES.md
config/: .env.example  .env_llm.example  .env_proxy.example  docker-compose.yml  settings.yml
data/: eval_log.jsonl  eval_set.json  radar_eval_set.json
docs/: CHATGPT_REVIEW_REQUEST_v0.8.0.md  SELF_REVIEW_v0.8.0.md
scripts/: e2e_falcon9.py  e2e_smoke_llm.py  e2e_smoke_pipeline.py  e2e_smoke_ranking.py  e2e_smoke_ranking_independent.py  eval.py  eval_radar_retrieval.py  eval_radar_sources.py  radar_discover.py  release.sh
src/: citations.py  cli.py  critical_review.py  evidence.py  gap_analysis.py  hermes_deepresearch.py  hermes_searxng.py  llm_verifier.py  models.py  planner.py  query_adaptation.py  radar_source_eval.py  radar_sources.py  ranking.py  redact.py  release_packaging.py  research_runner.py  routing.py  synthesis.py
tests/: conftest.py  test_adversarial_query_planner.py  test_canonical_url.py  test_citations.py  test_claim_modeling.py  test_cli.py  test_compose_config.py  test_critical_review.py  test_deepresearch_votes.py  test_docker_compose_config.py  test_eval_canonical_dedup.py  test_evidence_windows.py  test_extract_facts.py  test_gap_analysis.py  test_hermes_searxng.py  test_infer_time_range.py  test_llm_verifier.py  test_models.py  test_numeric_matcher.py  test_packaging.py  test_planner.py  test_query_adaptation.py  test_radar_eval_set.py  test_radar_retrieval_eval.py  test_radar_source_eval.py  test_radar_sources.py  test_ranking.py  test_redact.py  test_research_runner.py  test_routing.py  test_synthesis.py  test_synthesis_v083b.py  test_synthesis_v083c1.py  test_synthesis_v083c3.py  test_synthesis_v083d.py  test_url_safety.py  test_verify_c2data.py  test_verify_schema.py  test_weak_support_semantics.py
