[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searxng-deep-research"
version = "0.8.1.3"
description = "Local SearXNG-based research fetcher with 4-level fact verification and optional LLM cross-check"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Georgy Belyanin"},
]
dependencies = [
    "trafilatura>=2.0,<3",
    "lxml>=5,<7",
    "rapidfuzz>=3,<4",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.15,<1",
]

[project.urls]
"Source" = "https://github.com/ergon73/searxng-deep-research"

# === Ruff config ===
[tool.ruff]
line-length = 110
target-version = "py311"
src = ["."]

[tool.ruff.lint]
# Разрешаем assert, print — это не production-library
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = [
    "E501",   # line-too-long (line-length=110)
    "B008",   # function call in default argument (urllib patterns)
    "S101",   # assert (pytest style)
    "S104",   # hardcoded bind address (Docker needs 0.0.0.0)
]

[tool.ruff.lint.per-file-ignores]
# tests may have asserts (S101), magic numbers (S106), temp paths in fixtures (S108),
# and need sys.path.insert() before src imports (E402). S105 (hardcoded password)
# allowed because tests use obvious placeholder values like 'mysecret1234' to verify
# redaction logic (not real credentials). B (bugbear) stays on — catches real bugs
# in test harness that blanket ["S", "B"] would hide.
"tests/*" = ["S101", "S105", "S106", "S108", "E402"]
# e2e smoke scripts hardcode /tmp output dirs (one-shot dev tooling, not user-facing)
"scripts/e2e_*.py" = ["S108"]   # hardcoded /tmp path is intentional for smoke traces
# S310 false-positives guarded at function level by _is_safe_fetch_url() / _safe_urlopen()
#   (see tests/test_url_safety.py for proof). S310 cannot infer our custom SafeRedirectHandler.
"src/hermes_deepresearch.py" = ["S310"]
"src/hermes_searxng.py" = ["S310"]
"src/llm_verifier.py" = ["S310"]

# === Pytest config ===
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]   # portable — no conftest sys.path hack needed
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]
